switched to only use socialico and font-awesome. fixed turbolink overflow problem

--- a/app/assets/stylesheets/offcanvas.css.scss
+++ b/app/assets/stylesheets/offcanvas.css.scss
@@ -1,7 +1,7 @@
 
 #page {
    padding-top: 52px;
-   position: relative;
+   // position: relative;
    -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
@@ -134,21 +134,21 @@
       color: $body-font-color;
    }
    .search-button {
-      font-size: 22px;
+      font-size: 40px;
       line-height: 50px;
       position: absolute;
       top: 0;
       right: 15px;
-      // &.active:before {
-      //    content: "\f218";
-      // }
+      &.active {
+         font-size: 25px;
+      }
    }
    .menu-button {
       line-height: 50px;
       position: absolute;
       top: 0;
-      left: 5px;
-      font-size: 30px;
+      left: 15px;
+      font-size: 25px;
    }
    .logo {
       margin: 0 auto;
